# debate2create

./: .env.example  .gitignore  CITATION.cff  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  render.py  requirements.txt
.github/workflows/: smoke.yml
assets/: ant.xml
baselines/: README.md  laser_baseline.py  run_baselines.py  run_laser_all.sh
baselines/ant/bayesian/: GPTAnt.xml
baselines/ant/d2c/: ant_modified.xml  reward_id3.py
baselines/half_cheetah/d2c/: half_cheetah_modified.xml  reward_id3.py
baselines/half_cheetah/default/: GPTCheetah.xml
baselines/half_cheetah/eureka/: GPTrewardfunc.py
baselines/half_cheetah/eureka_mor/: GPTrewardfunc.py
cfg/: config.yaml
cfg/env/: ant.yaml  half_cheetah.yaml  hopper.yaml  swimmer.yaml  walker2d.yaml
cfg/hydra/launcher/: local.yaml
docs/: PLOTTING_README.md  PLURALISTIC_JUDGE_README.md  README.md  icml_video_cluster_plan.md  icml_video_pipeline.md  icml_video_shot_list.md
envs/: ant.py  ant_obs.txt  half_cheetah.py  half_cheetah_obs.txt  hopper.py  hopper_obs.txt  swimmer.py  swimmer_obs.txt  walker2d.py  walker2d_obs.txt
scripts/: README.md  capture_brax_html.py  compose_robot_videos.py  evaluate_disentanglement.py  extract_brax_html_trajectory.py  plot_debate_performance.py  preflight.sh  reconstruct_ant_xml_from_html.py  render_mujoco_trajectory.py  render_xml_reward.py  train_from_round.py  train_hopper_sac_baseline.py  train_xml_reward.py
src/: debate.py  debate_entry.py  parallel_train.py  pluralistic_judge.py  render_policy.py  train_eval.py
tests/: test_smoke.py
utils/: design_robot_multi.py  eureka_reward_compile.py  extract_task_code.py  llm_client.py  make_env.py
utils/prompts/: code_feedback.txt  code_output_tip.txt  execution_error_feedback.txt  initial_system.txt  initial_user.txt  initial_user_enhanced.txt  interpreter_enhanced_user.txt  interpreter_system.txt  interpreter_user.txt  policy_feedback.txt  reward_signature.txt
(+36 files in other folders)
